--- a/src/CryTraCtor.WebApp/Components/Pages/DnsPacketsByParticipant.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/DnsPacketsByParticipant.razor
@@ -26,7 +26,11 @@
         <PropertyColumn Property="x => x.QueryName" Title="Query Name"/>
         <PropertyColumn Property="x => x.KnownDomainPurpose" Title="Purpose"/>
         <PropertyColumn Property="x => x.QueryType" Title="Query Type"/>
-        <PropertyColumn Property="x => x.ResponseAddresses" Title="Response Addresses"/>
+        <TemplateColumn Title="Response Addresses">
+            <CellTemplate>
+                @string.Join(", ", context.Item.ResolvedAddresses.Select(p => p.Address).Distinct())
+            </CellTemplate>
+        </TemplateColumn>
         <PropertyColumn Property="x => x.Client.Address" Title="Client Address"/>
         <PropertyColumn Property="x => x.Client.Port" Title="Client Port"/>
         <PropertyColumn Property="x => x.Resolver.Address" Title="Resolver Address"/>
@@ -60,7 +64,11 @@
             <PropertyColumn Property="x => x.TransactionId" Title="Transaction ID"/>
             <PropertyColumn Property="x => x.QueryName" Title="Query Name"/>
             <PropertyColumn Property="x => x.QueryType" Title="Query Type"/>
-            <PropertyColumn Property="x => x.ResponseAddresses" Title="Response Addresses"/>
+            <TemplateColumn Title="Response Addresses">
+                <CellTemplate>
+                    @string.Join(", ", context.Item.ResolvedTrafficParticipants.Select(p => p.Address).Distinct())
+                </CellTemplate>
+            </TemplateColumn>
             <PropertyColumn Property="x => x.Sender.Address" Title="Sender Address"/>
             <PropertyColumn Property="x => x.Sender.Port" Title="Sender Port"/>
             <PropertyColumn Property="x => x.Recipient.Address" Title="Recipient Address"/>
@@ -76,7 +84,7 @@
         ushort TransactionId,
         string QueryName,
         string QueryType,
-        string ResponseAddresses,
+        List<TrafficParticipantListModel> ResolvedAddresses,
         TrafficParticipantListModel Client,
         TrafficParticipantListModel Resolver,
         string? KnownDomainPurpose);
@@ -138,10 +146,10 @@
                             query.TransactionId,
                             query.QueryName,
                             query.QueryType,
-                            response.ResponseAddresses,
+                            response.ResolvedTrafficParticipants,
                             query.Sender,
                             query.Recipient,
-                            query.KnownDomainPurpose
+                            query.KnownDomainPurpose ?? response.KnownDomainPurpose
                         ));
                         transactionPackets.Add(query.Id);
                         transactionPackets.Add(response.Id);
