--- a/src/CryTraCtor.WebApp/Components/Pages/TrafficParticipantKnownDomains.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/TrafficParticipantKnownDomains.razor
@@ -1,6 +1,6 @@
 @page "/files/{FileId:guid}/file-analysis/{FileAnalysisId:guid}/traffic-participants/{TrafficParticipantId:guid}/known-domains"
 @using CryTraCtor.Business.Facades.Interfaces
-@using CryTraCtor.Business.Models.Agregates
+@using CryTraCtor.Business.Models.Aggregates
 @inject ITrafficParticipantFacade TrafficParticipantFacade
 @using CryTraCtor.WebApp.Services
 @using CryTraCtor.WebApp.Enums
@@ -62,6 +62,28 @@ else
                                 </TemplateColumn>
                             </Columns>
                         </MudDataGrid>
+                    }
+
+                    @if (productSummary.LinkedGenericPackets.Any())
+                    {
+                        <MudText Typo="Typo.subtitle1" Class="mt-3 mb-2">Linked Generic Packets (via DNS to Product Domains):</MudText>
+                        <MudDataGrid Items="@productSummary.LinkedGenericPackets.OrderByDescending(p => p.Timestamp)" T="LinkedGenericPacketModel" Dense="true"
+                                     Striped="true" Bordered="true" Hover="true" MaxHeight="400px">
+                            <Columns>
+                                <PropertyColumn Property="x => x.Timestamp" Title="Timestamp" Format="s"/>
+                                <PropertyColumn Property="x => x.TrafficDirection" Title="Direction"/>
+                                <PropertyColumn Property="x => x.SourceIp" Title="Src IP"/>
+                                <PropertyColumn Property="x => x.SourcePort" Title="Src Port"/>
+                                <PropertyColumn Property="x => x.DestinationIp" Title="Dst IP"/>
+                                <PropertyColumn Property="x => x.DestinationPort" Title="Dst Port"/>
+                                <PropertyColumn Property="x => x.DnsQueryDomain" Title="DNS Query"/>
+                                <PropertyColumn Property="x => x.MatchedDomain" Title="Matched Product Domain"/>
+                            </Columns>
+                        </MudDataGrid>
+                    }
+                    else
+                    {
+                        <MudText Class="mt-3"><em>No linked generic packets found for this product.</em></MudText>
                     }
                 </MudPaper>
             }
