--- a/src/CryTraCtor.WebApp/Components/Pages/TrafficParticipants.razor
+++ b/src/CryTraCtor.WebApp/Components/Pages/TrafficParticipants.razor
@@ -3,10 +3,14 @@
 @using CryTraCtor.Business.Facades.Interfaces
 @using CryTraCtor.Business.Models.TrafficParticipants
 @using CryTraCtor.WebApp.Services
+@using CryTraCtor.WebApp.Enums
 
 @inject ITrafficParticipantFacade TrafficParticipantFacade
 @inject ISnackbar Snackbar
 @inject IBreadcrumbService BreadcrumbService
+
+<AnalysisOverviewNavButtonGroup FileId="FileId" FileAnalysisId="FileAnalysisId"
+                                ActiveView="AnalysisOverviewViewType.TrafficParticipants"/>
 
 <h3>Traffic Participants</h3>
 
@@ -69,13 +73,11 @@
             _trafficParticipants = (await TrafficParticipantFacade.GetByFileAnalysisIdAsync(FileAnalysisId)).ToList();
 
             // Calculate checksum
-            using (var sha256 = System.Security.Cryptography.SHA256.Create())
-            {
-                // Combine all properties into a single string for hashing
-                var combinedString = string.Join(",", _trafficParticipants.Select(e => $"{e.Address},{e.Port},{e.OutgoingDnsCount},{e.IncomingDnsCount},{e.UniqueMatchedKnownDomainCount},{e.TotalMatchedKnownDomainCount},{e.OutgoingBitcoinCount},{e.IncomingBitcoinCount}"));
-                var hashBytes = sha256.ComputeHash(System.Text.Encoding.UTF8.GetBytes(combinedString));
-                _checksum = BitConverter.ToString(hashBytes).Replace("-", "").ToLower();
-            }
+            using var sha256 = System.Security.Cryptography.SHA256.Create();
+
+            var combinedString = string.Join(",", _trafficParticipants.Select(e => $"{e.Address},{e.Port},{e.OutgoingDnsCount},{e.IncomingDnsCount},{e.UniqueMatchedKnownDomainCount},{e.TotalMatchedKnownDomainCount},{e.OutgoingBitcoinCount},{e.IncomingBitcoinCount}"));
+            var hashBytes = sha256.ComputeHash(System.Text.Encoding.UTF8.GetBytes(combinedString));
+            _checksum = BitConverter.ToString(hashBytes).Replace("-", "").ToLower();
         }
         catch (Exception ex)
         {
