feat: add all bitcoin messages view

--- a/src/CryTraCtor.WebApp/Components/Shared/AnalysisOverviewNavButtonGroup.razor
+++ b/src/CryTraCtor.WebApp/Components/Shared/AnalysisOverviewNavButtonGroup.razor
@@ -11,6 +11,10 @@
                Disabled="@(ActiveView == AnalysisOverviewViewType.KnownServices)">
         Known Services
     </MudButton>
+    <MudButton StartIcon="@Icons.Material.Filled.Message" Href="@(AppRoutes.AllBitcoinMessagesUrl(FileId, FileAnalysisId))"
+               Disabled="@(ActiveView == AnalysisOverviewViewType.AllBitcoinMessages)">
+        All Bitcoin Messages
+    </MudButton>
 </MudButtonGroup>
 
 @code {
